--- a/master/src/main/resources/config.master
+++ b/master/src/main/resources/config.master
@@ -1,25 +1,15 @@
 #
-# The client reads this property to create the reference to the
-# "hello" object in the server.
+# This property is used to configure the endpoints of the clock
+# subscriber adapter. These endpoints are where the client receives
+# topic messages from IceStorm.
 #
-Hello.Proxy=hello
-
-
-#
-# The IceGrid locator proxy.
-#
-
+Hello.Endpoints=tcp -p 9090
 Ice.Default.Locator=DemoIceGrid/Locator:default -h localhost -p 4061
-
+Clock.Subscriber.Endpoints=tcp:udp
 #
-# To use the IceGrid discovery plugin comment out the default locator
-# property above and un-comment the two properties below. The discovery
-# plugin uses multicast to discover IceGrid.
+# Only listen on the localhost interface by default.
 #
-#Ice.Plugin.IceLocatorDiscovery=IceLocatorDiscovery:com.zeroc.IceLocatorDiscovery.PluginFactory
-#IceLocatorDiscovery.InstanceName=DemoIceGrid
-
-##ICE STORM
+Ice.Default.Host=localhost
 
 #
 # This property is used by the clients to connect to IceStorm.
@@ -36,10 +26,9 @@ TopicManager.Proxy=DemoIceStorm/TopicManager:default -h localhost -p 10000
 #
 #Ice.Trace.Network=1
 
-#
 # IceMX configuration.
 #
 #Ice.Admin.Endpoints=tcp -h localhost -p 10004
-Ice.Admin.InstanceName=publisher
+Ice.Admin.InstanceName=subscriber
 IceMX.Metrics.Debug.GroupBy=id
 IceMX.Metrics.ByParent.GroupBy=parent
