--- a/master/src/main/resources/config.master
+++ b/master/src/main/resources/config.master
@@ -3,9 +3,8 @@
 # subscriber adapter. These endpoints are where the client receives
 # topic messages from IceStorm.
 #
-WorkerI.Endpoints=tcp -p 9090
-Ice.Default.Locator=DemoIceGrid/Locator:default -h localhost -p 4061
-Clock.Subscriber.Endpoints=tcp:udp
+Worker.Endpoints=tcp -p 9090
+#Ice.Default.Locator=DemoIceGrid/Locator:default -h localhost -p 4061
 
 
 
@@ -14,6 +13,7 @@ Clock.Subscriber.Endpoints=tcp:udp
 #
 
 Sorter.Master.Endpoints=tcp -p 9099
+
 Ice.Default.Host=localhost
 Ice.ThreadPool.Server.Size=5
 
